--- a/app/src/main/res/layout/tab_search.xml
+++ b/app/src/main/res/layout/tab_search.xml
@@ -9,6 +9,9 @@
         android:layout_height="wrap_content"
         android:text="@string/keyword"
         android:textSize="24sp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         />
 
     <AutoCompleteTextView
@@ -16,7 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView1"
-        android:hint="@string/enter_keyword" />
+        android:hint="@string/enter_keyword"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 
     <TextView
         android:id="@+id/textView3"
@@ -25,14 +30,20 @@
         android:layout_below="@+id/keyword"
         android:layout_alignParentStart="true"
         android:text="@string/category"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 
     <Spinner
         android:id="@+id/category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView3"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="24sp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        />
 
     <TextView
         android:id="@+id/textView5"
@@ -41,7 +52,9 @@
         android:layout_below="@+id/category"
         android:layout_alignParentStart="true"
         android:text="@string/distance"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 
     <EditText
         android:id="@+id/radius"
@@ -52,14 +65,18 @@
         android:ems="10"
         android:hint="@string/_10"
         android:importantForAutofill="no"
-        android:inputType="number" />
+        android:inputType="number"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 
     <Spinner
         android:id="@+id/unit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/radius"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 
     <TextView
         android:id="@+id/textView6"
@@ -68,13 +85,17 @@
         android:layout_below="@+id/unit"
         android:layout_alignParentStart="true"
         android:text="@string/from"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 
     <RadioGroup
         android:id="@+id/from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView6">
+        android:layout_below="@id/textView6"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
         <RadioButton
             android:id="@+id/here"
             android:text="@string/current_location"
@@ -100,7 +121,9 @@
         android:ems="10"
         android:hint="@string/typw_in_the_location"
         android:inputType="textPersonName"
-        android:autofillHints="" />
+        android:autofillHints=""
+        android:layout_marginLeft="10dp"
+        />
 
     <Button
         android:id="@+id/search"
