Call adress api

--- a/app/src/main/res/layout/tab_search.xml
+++ b/app/src/main/res/layout/tab_search.xml
@@ -123,6 +123,8 @@
         android:inputType="textPersonName"
         android:autofillHints=""
         android:layout_marginLeft="10dp"
+        android:enabled="false"
+
         />
 
     <Button
