--- a/app/src/main/res/layout/tab_search.xml
+++ b/app/src/main/res/layout/tab_search.xml
@@ -119,11 +119,12 @@
         android:layout_below="@+id/from"
         android:layout_alignParentStart="true"
         android:ems="10"
-        android:hint="@string/typw_in_the_location"
+        android:hint="@string/type_in_the_location"
         android:inputType="textPersonName"
         android:autofillHints=""
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="40dp"
         android:enabled="false"
+        android:layout_marginRight="10dp"
 
         />
 
