--- a/app/src/main/res/layout/tab_event.xml
+++ b/app/src/main/res/layout/tab_event.xml
@@ -3,14 +3,11 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
 
-    <EditText
-        android:id="@+id/editText"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="161dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="EVENT DETAIL" />
+        android:text="TextView" />
 </RelativeLayout>
