--- a/app/src/main/res/menu/menu_detail_page.xml
+++ b/app/src/main/res/menu/menu_detail_page.xml
@@ -1,10 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.snow.csci571hw9.DetailPageActivity">
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+    android:id="@+id/action_favorite"
+
+    android:title="@string/favorite"
+    app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_twitter"
+        android:title="twitter"
+        app:showAsAction="always" />
+
+
+
 </menu>
