--- a/app/src/main/res/layout/activity_detail_page.xml
+++ b/app/src/main/res/layout/activity_detail_page.xml
@@ -34,24 +34,28 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/event" />
+                android:icon="@drawable/tab_ic_event"
+                android:text="@string/event"/>
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:icon="@drawable/tab_ic_artist"
                 android:text="@string/artist_s" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:icon="@drawable/tab_ic_venue"
                 android:text="@string/venue" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:icon="@drawable/tab_ic_upcoming"
                 android:text="@string/upcoming" />
 
         </android.support.design.widget.TabLayout>
