--- a/app/src/main/res/layout/events_layout.xml
+++ b/app/src/main/res/layout/events_layout.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="2dp">
 
     <RelativeLayout
         android:id="@+id/eventitem"
@@ -17,7 +18,7 @@
         android:layout_height="80dp"
         android:id="@+id/category"
         android:scaleType="fitCenter"
-        android:padding="5dp"/>
+        android:padding="10dp"/>
 
     <TextView
         android:id="@+id/eventname"
@@ -59,7 +60,7 @@
         android:layout_height="80dp"
         android:id="@+id/favoriteresult"
         android:scaleType="fitCenter"
-        android:padding="15dp"
+        android:padding="20dp"
         android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
