--- a/app/src/main/res/layout/tab_favorite.xml
+++ b/app/src/main/res/layout/tab_favorite.xml
@@ -2,15 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="161dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Favorite works!" />
+<TextView
+    android:id="@+id/favlist"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
 </RelativeLayout>
