--- a/app/src/main/res/layout/tab_favorite.xml
+++ b/app/src/main/res/layout/tab_favorite.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
 <TextView
     android:id="@+id/favlist"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
-</RelativeLayout>
+
+
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/favoriterecycle">
+    </android.support.v7.widget.RecyclerView>
+
+</LinearLayout>
+</ScrollView>
