--- a/app/src/main/res/layout/tab_upcoming.xml
+++ b/app/src/main/res/layout/tab_upcoming.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent">
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,3 +16,4 @@
         android:layout_height="wrap_content"
         android:text="TextView" />
 </FrameLayout>
+</ScrollView>
