--- a/app/src/main/res/layout/tab_upcoming.xml
+++ b/app/src/main/res/layout/tab_upcoming.xml
@@ -3,17 +3,42 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent">
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/upcomingpinner"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TabUpcoming">
 
-
-    <TextView
-        android:id="@+id/textView2"
+    <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
-</FrameLayout>
+        android:id="@+id/sortby" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/acend"
+        android:layout_toRightOf="@+id/sortby"/>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sortby">
+
+    <LinearLayout
+        android:id="@+id/recyclercoming"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        android:id="@+id/upcominglist">
+    </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+</RelativeLayout>
+</RelativeLayout>
 </ScrollView>
