--- a/app/src/main/res/layout/upcomings_layout.xml
+++ b/app/src/main/res/layout/upcomings_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/upcoming_card"
@@ -14,8 +14,8 @@
         app:contentPadding="10dp" >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
                 android:text="type" />
-        </LinearLayout>
 
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
