--- a/app/src/main/res/layout/tab_artist.xml
+++ b/app/src/main/res/layout/tab_artist.xml
@@ -6,7 +6,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".TabArtist">
 
     <TextView
@@ -18,6 +18,7 @@
         android:gravity="center_horizontal"/>
 
     <RelativeLayout
+        android:id="@+id/atrist1_table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/atris1_name0">
@@ -101,7 +102,21 @@
                 android:text="@string/spotify"/>
         </TableRow>
     </TableLayout>
+
     </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/atrist1_table">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/artist1_photos">
+        </android.support.v7.widget.RecyclerView>
+
+    </RelativeLayout>
+
 
 
 </RelativeLayout>
