--- a/app/src/main/res/layout/tab_artist.xml
+++ b/app/src/main/res/layout/tab_artist.xml
@@ -25,7 +25,6 @@
 
     <TableLayout
         android:id="@+id/artist1_spotify"
-        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -34,6 +33,8 @@
         >
 
         <TableRow
+            android:id="@+id/atris1_name_row"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="2dp">
@@ -52,6 +53,8 @@
         </TableRow>
 
         <TableRow
+            android:id="@+id/atris1_follower_row"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="2dp">
@@ -69,6 +72,8 @@
         </TableRow>
 
         <TableRow
+            android:id="@+id/atris1_popilarity_row"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="2dp">
@@ -86,6 +91,8 @@
         </TableRow>
 
         <TableRow
+            android:id="@+id/atris1_url_row"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="2dp">
