--- a/app/src/main/res/layout/tab_artist.xml
+++ b/app/src/main/res/layout/tab_artist.xml
@@ -21,8 +21,32 @@
     <RelativeLayout
         android:id="@+id/atrist1_table"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:id="@+id/searchingspotify_artist1">
+
+            <ProgressBar
+                android:id="@+id/progressBarArtist1Spotify"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center" />
+
+        <TextView
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="15dp"
+            android:layout_toRightOf="@+id/progressBarArtist1Spotify"
+            android:text="Searching..." />
+
+        </RelativeLayout>
 
     <TableLayout
         android:id="@+id/artist1_spotify"
@@ -118,6 +142,31 @@
         android:layout_height="wrap_content"
         >
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:id="@+id/searchingphoto_artist1">
+
+            <ProgressBar
+                android:id="@+id/progressBarPhotoArtist1"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center" />
+
+            <TextView
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@+id/progressBarPhotoArtist1"
+                android:text="Searching..." />
+
+        </RelativeLayout>
+
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
@@ -141,6 +190,31 @@
         android:id="@+id/atrist2_table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:id="@+id/searchingspotify_artist2">
+
+            <ProgressBar
+                android:id="@+id/progressBarArtist2Spotify"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center" />
+
+            <TextView
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@+id/progressBarArtist2Spotify"
+                android:text="Searching..." />
+
+        </RelativeLayout>
 
         <TableLayout
             android:id="@+id/artist2_spotify"
@@ -233,6 +307,31 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:id="@+id/searchingphoto_artist2">
+
+            <ProgressBar
+                android:id="@+id/progressBarPhotoArtist2"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center" />
+
+            <TextView
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@+id/progressBarPhotoArtist2"
+                android:text="Searching..." />
+
+        </RelativeLayout>
 
 
         <android.support.v7.widget.RecyclerView
