--- a/app/src/main/res/layout/tab_favorite.xml
+++ b/app/src/main/res/layout/tab_favorite.xml
@@ -1,18 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:visibility="gone"
+    android:id="@+id/no_result_message">
+
+    <TextView
+        android:id="@+id/eventnoresult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="no result"/>
+
+</RelativeLayout>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-
-<TextView
-    android:id="@+id/favlist"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
-
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:ignore="ScrollViewSize">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
@@ -20,5 +35,10 @@
         android:id="@+id/favoriterecycle">
     </android.support.v7.widget.RecyclerView>
 
+
 </LinearLayout>
+
+
 </ScrollView>
+
+</android.support.constraint.ConstraintLayout>
