--- a/app/src/main/res/layout/tab_venue.xml
+++ b/app/src/main/res/layout/tab_venue.xml
@@ -1,4 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="visible"
+        android:id="@+id/searchingvenue">
+
+        <ProgressBar
+            android:id="@+id/progressBarVenue"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/progressBarVenue"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="15dp"
+            android:layout_toRightOf="@+id/progressBarVenue"
+            android:gravity="center"
+            android:text="Searching..."
+            android:visibility="visible" />
+    </RelativeLayout>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
@@ -168,3 +199,4 @@
 
 </LinearLayout>
 </ScrollView>
+</android.support.constraint.ConstraintLayout>
