--- a/app/src/main/res/layout/tab_artist.xml
+++ b/app/src/main/res/layout/tab_artist.xml
@@ -174,6 +174,14 @@
             android:id="@+id/artist1_photos">
         </android.support.v7.widget.RecyclerView>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/no_result_message_photo1"
+            android:visibility="gone"
+            android:textAlignment="center"
+            android:text="no result"/>
+
 
 
     </RelativeLayout>
@@ -339,6 +347,14 @@
             android:layout_height="wrap_content"
             android:id="@+id/artist2_photos">
         </android.support.v7.widget.RecyclerView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/no_result_message_photo2"
+            android:textAlignment="center"
+            android:visibility="gone"
+            android:text="no result"/>
 
 
 
