--- a/app/src/main/res/layout/tab_favorite.xml
+++ b/app/src/main/res/layout/tab_favorite.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="no result"/>
+        android:text="no favorite"/>
 
 </RelativeLayout>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
